--- a/ny.html
+++ b/ny.html
@@ -151,7 +151,7 @@
             <div class="collapse navbar-collapse js-navbar-collapse pull-right">
               <ul id="menu" class="nav navbar-nav">
                 <li> <a href="#">工程實績</a></li>
-                <li> <a href="#">產品介紹</a></li>
+                <li> <a href="product.html">產品介紹</a></li>
                 <li> <a href="#">報價諮詢</a></li>
                 <li> <a href="#">關於我們</a></li>
                 <li> <a href="#">最新消息</a></li>
@@ -175,7 +175,7 @@
                   <ul class="nav  main-navigation collapse in">
                     <li><a href="#">LED廣告招牌</a></li>
                     <li><a href="#">門牌設計製作</a></li>
-                    <li><a href="#">亞特燈箱</a></li>
+                    <li><a href="#">品牌/通路燈箱</a></li>
                     <li><a href="#">立體字</a></li>
                     <li><a href="#">指示牌/標示牌</a></li>
                     <li><a href="#">雷射CNC切割</a></li>
@@ -206,7 +206,7 @@
               <ul class="nav  main-navigation collapse in">
                 <li><a href="#">LED廣告招牌</a></li>
                 <li><a href="#">門牌設計製作</a></li>
-                <li><a href="#">亞特燈箱</a></li>
+                <li><a href="#">品牌/通路燈箱</a></li>
                 <li><a href="#">立體字</a></li>
                 <li><a href="#">指示牌/標示牌</a></li>
                 <li><a href="#">雷射CNC切割</a></li>
@@ -286,12 +286,12 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="#"> <img class="img-responsive" title="亞特燈箱" alt="" src="images/work/L4.jpg"> <img class="img-responsive" title="亞特燈箱" alt="" src="images/work/L4_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="#"> <img class="img-responsive" title="品牌/通路燈箱" alt="" src="images/work/L4.jpg"> <img class="img-responsive" title="品牌/通路燈箱" alt="" src="images/work/L4_2.jpg"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="#">亞特燈箱</a></h6>
+                      <h6 class="product-name"><a href="#">品牌/通路燈箱</a></h6>
                       <!-- <div class="rating">
                         <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
                         <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i><i class="fa fa-star fa-stack-1x"></i></span>
@@ -604,7 +604,7 @@
                   <span> 餐廳</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>亞特燈箱、LED廣告招牌、大圖廣告</span>
+                  <span>品牌/通路燈箱、LED廣告招牌、大圖廣告</span>
                 </li>
                 <!-- <li>
                   <label><a href="#">廣告招牌</a></label>
@@ -652,7 +652,7 @@
                 <ul class="nav nav-tabs">
                   <li class="active"> <a href="#1c" data-toggle="tab">產品規格</a> </li>
                   <!-- <li><a href="#2c" data-toggle="tab">Reviews (1)</a> </li> -->
-                  <li><a href="#3c" data-toggle="tab">餐廳簡介</a> </li>
+                  <li><a href="#3c" data-toggle="tab">客戶資訊</a> </li>
                 </ul>
                 <div class="tab-content mt_20">
                   <div class="tab-pane active" id="1c">
@@ -921,7 +921,7 @@
             <ul>
               <li><a href="#">LED廣告招牌</a></li>
               <li><a href="#">門牌設計製作</a></li>
-              <li><a href="#">亞特燈箱</a></li>
+              <li><a href="#">品牌/通路燈箱</a></li>
               <li><a href="#">立體字</a></li>
               <li><a href="#">指示牌/標示牌</a></li>
               <li><a href="#">雷射CNC切割</a></li>
@@ -930,9 +930,9 @@
           <div class="col-md-2 footer-block">
             <h6 class="footer-title ptb_20">網頁地圖</h6>
             <ul>
-              <li><a href="#">首頁</a></li>
+              <li><a href="index.html">首頁</a></li>
               <li><a href="#">工程實績</a></li>
-              <li><a href="#">產品介紹</a></li>
+              <li><a href="product.html">產品項目</a></li>
               <li><a href="#">報價諮詢</a></li>
               <li><a href="#">關於我們</a></li>
               <li><a href="#">最新消息</a></li>
