--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="favicon.ico" rel="icon" type="image/x-icon" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>快得力廣告</title>
+<title>產品項目</title>
 <meta name="description" content="" />
 <meta name="keywords" content="台中廣告, 台中招牌" />
 <link rel="stylesheet" type="text/css" href="style/css/font-awesome.min2.css" />
@@ -48,11 +48,11 @@
 <div class="nav_bg" id="fixedNav">
   <div class="mainall">
     <ul>
-      <li class='another' style="margin-left: 50px"><a  href="index.html" title="快得力首頁">首頁/Home</a> </li>
+      <li style="margin-left: 50px"><a  href="index.html" title="快得力首頁">首頁/Home</a> </li>
       
         <li><a href='./ny.html'>工程實績/Case</a></li><!-- hzkh -->
 
-        <li><a href='product.html'>產品項目/Product</a></li>
+        <li  class='another'><a href='product.html'>產品項目/Product</a></li>
 
         <li><a href='company/index.html'>報價諮詢/Order</a></li> <!-- (gongsi) -->
 
@@ -72,22 +72,21 @@
   </div>
 </div>
 <!--banner-->
-<div class="banner">
+<!-- <div class="banner">
   <div class="hd">
     <ul>
     </ul>
   </div>
   <div class="bd">
     <ul>
-     <li style="background:url(images/cov1.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
-<li style="background:url(images/ban01.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
-
+     <li style="background:url(images/cov1.jpg) no-repeat center center"></li>
+     <li style="background:url(images/ban01.jpg) no-repeat center center"></li>
     </ul>
   </div>
   <span class="prev"></span> <span class="next"></span>
-</div>
+</div> -->
 
-<div class="end_char">
+<!-- <div class="end_char">
   <div class="mainall">
     <ul>
       <li>專業施工</li>
@@ -97,9 +96,9 @@
       <li>業務諮詢</li>
     </ul>
   </div>
-</div>
+</div> -->
 
-<div class="search_dbg">
+<!-- <div class="search_dbg">
   <div class="mainall">
     <div class="search_zi"> </div>
     <div class="search1 ">
@@ -110,34 +109,26 @@
       </form>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="pro_dbg">
+<div class="pro_dbg" style="height:auto">
   <div class="mainall1">
-    <div class="pro_ct tc">
+    <!-- <div class="pro_ct tc">
      <h2> <a href="1chanpin/index.html" style="color: #f39800"> 產品項目/Product</a>
         <p style="color: #f39800; margin-top:20px">快得力的重點產品，專業訂製幫助您的店家形象提升</p>
      </h2>
-    </div>
-    <div class="clearboth"></div>
-    <div class="pro_c">
+    </div> -->
+    <!-- <div class="clearboth"></div> -->
+    <!-- <div class="pro_c">
       <ul>
-        <li> <a href="./index.html" title="LED廣告招牌" target="_blank"> LED廣告招牌</a> </li><!-- chanpin/xtygf -->
-        <li> <a href="./index.html" title="門牌設計製作" target="_blank"> 門牌設計製作</a> </li><!-- chanpin/chuangpeng -->
-        <li> <a href="./index.html" title="品牌/通路燈箱" target="_blank"> 品牌/通路燈箱</a> </li><!-- chanpin/chepeng -->
-        <li> <a href="./index.html" title="立體字" target="_blank"> 立體字</a> </li><!-- chanpin/lutaipeng -->
-        <li> <a href="./index.html" title="指示牌/標示牌" target="_blank"> 指示牌/標示牌</a> </li><!-- chanpin/lvyilangan -->
-        <li> <a href="./index.html" title="雷射CNC切割" target="_blank"> 雷射CNC切割</a> </li><!-- chanpin/lvyidamen -->
+        <li> <a href="./index.html" title="LED廣告招牌" target="_blank"> LED廣告招牌</a> </li>
+        <li> <a href="./index.html" title="門牌設計製作" target="_blank"> 門牌設計製作</a> </li>
+        <li> <a href="./index.html" title="品牌/通路燈箱" target="_blank"> 品牌/通路燈箱</a> </li>
+        <li> <a href="./index.html" title="立體字" target="_blank"> 立體字</a> </li>
+        <li> <a href="./index.html" title="指示牌/標示牌" target="_blank"> 指示牌/標示牌</a> </li>
+        <li> <a href="./index.html" title="雷射CNC切割" target="_blank"> 雷射CNC切割</a> </li>
       </ul>
-      <!-- <ul>
-        <li> <a href="./index.html" title="指示牌" target="_blank"> 指示牌</a> </li>
-        <li> <a href="./index.html" title="金屬字" target="_blank"> 金屬字</a> </li>
-        <li> <a href="./index.html" title="雷射切割" target="_blank"> 雷射切割</a> </li>
-        <li> <a href="./index.html" title="CNC切割" target="_blank"> CNC切割</a> </li>
-        <li> <a href="./index.html" title="LED招牌" target="_blank"> LED招牌</a> </li>
-        <li> <a href="./index.html" title="戶外廣告" target="_blank"> 戶外廣告</a> </li>
-      </ul> -->
-    </div>
+    </div> -->
     <div class="clearboth"></div>
     <div class="pro_show_n">
       <ul>
@@ -169,56 +160,23 @@
         <li>
           <div class="pic"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
           <div class="info"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
-          <em></em>
         </li>
-        <!-- <li>
-          <div class="pic"> <a href="1chanpin/xtygf/14.html" title="指示牌" target="_blank"> <img src="images/s7.jpg" alt="指示牌"/> </a> </div>
-          <div class="info" style="margin-top: -80px"> <a href="1chanpin/xtygf/14.html" title="指示牌" target="_blank">指示牌</a> </div>
-          <em></em>
-        </li>
-        <li>
-          <div class="pic"> <a href="1chanpin/xtygf/19.html" title="金屬字" target="_blank"> <img src="images/s8.jpg" alt="金屬字"/> </a> </div>
-          <div class="info" style="margin-top: -80px"> <a href="1chanpin/xtygf/19.html" title="金屬字" target="_blank">金屬字</a> </div>
-          <em></em>
-        </li>
-        <li>
-          <div class="pic"> <a href="1chanpin/xtygf/17.html" title="雷射切割" target="_blank"> <img src="images/s9.jpg" alt="雷射切割"/> </a> </div>
-          <div class="info" style="margin-top: -80px"> <a href="1chanpin/xtygf/17.html" title="雷射切割" target="_blank">雷射切割</a> </div>
-          <em></em>
-        </li>
-        <li>
-          <div class="pic"> <a href="1chanpin/xtygf/16.html" title="CNC切割" target="_blank"> <img src="images/s10.jpg" alt="CNC切割"/> </a> </div>
-          <div class="info" style="margin-top: -80px"> <a href="1chanpin/xtygf/16.html" title="CNC切割" target="_blank">CNC切割</a> </div>
-          <em></em>
-        </li>
-        <li>
-          <div class="pic"> <a href="1chanpin/xtygf/18.html" title="LED招牌" target="_blank"> <img src="images/s11.jpg" alt="LED招牌"/> </a> </div>
-          <div class="info" style="margin-top: -80px"> <a href="1chanpin/xtygf/18.html" title="LED招牌"  target="_blank">LED招牌</a> </div>
-          <em></em>
-        </li>
-        <li>
-          <div class="pic"> <a href="1chanpin/xtygf/15.html" title="戶外廣告" target="_blank"> <img src="images/s12.jpg" alt="戶外廣告"/> </a> </div>
-          <div class="info" style="margin-top: -80px"> <a href="1chanpin/xtygf/15.html" title="戶外廣告" target="_blank">戶外廣告</a> </div>
-          <em></em>
-        </li> -->
-
       </ul>
     </div>
   </div>
 </div>
 
-<div class="gg1">
+<!-- <div class="gg1">
   <div class="mainall">
     <div class="gg1_zi fl">
       <h4 style="line-height: 40px; margin: 20px 0 0 200px">最新EDM下載</h4>
     </div>
     <div class="gg1_tel fr">
-      <!-- <p>即刻來電：<span>04-23829500</span></p> -->
       <a href="" title="免費下載" style="margin: 55px 300px 0 0">由此去</a> </div>
   </div>
-</div>
+</div> -->
 
-<div class="about_dbg">
+<!-- <div class="about_dbg">
   <div class="mainall1">
     <div class="case_t tc">
       <div class="pro_ct tc">
@@ -265,20 +223,16 @@
       </script> 
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="clearboth"></div>
 
-<div class="td_dbg">
+<!-- <div class="td_dbg">
   <div class="mainall1 re">
     <div class="td_t tc">
      <h4><span style="font-size: 30px">品牌顏製所/Brand</span></h4>
     </div>
     <p style="color: #f39800; text-align: center; font-size: 16px; margin-top: 10px">台中在地招牌廣告公司，優秀職人招牌訂製</p>
-    <!-- <div class="td_tel ab">
-      <p>諮詢熱線：</p>
-      <span>04-23829500</span> 
-    </div> -->
     <div class="td_left fl">
       <ul>
         <li rel="#td1">
@@ -318,17 +272,15 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="mainall">
+<!-- <div class="mainall">
   <div class="news_left fl wow bounceInLeft">
     <div class="news_nav">
      <h3 rel="#new01"><a href="#" style="font-weight: bold;">合作夥伴</a></h3>
     </div>
     <div class="clearboth"></div>
-
     <div class="case_t tc">
-      
     </div>
     <div class="honor_n">
       <div class="bd">
@@ -356,36 +308,11 @@
     <script type="text/javascript">
     jQuery(".honor_n").slide({titCell:".hd ul",mainCell:".bd ul",autoPage:true,effect:"leftLoop",autoPlay:true,vis:3});
    </script> 
-
-    <!-- <div class="news_n none" id="new01">
-      <div class="news_pic "> <a href="#" title=""><img src="images/010.png" alt="" /></a> <a href="#" title="" class="t">本公司榮獲臺中市商業會表揚為2016年優良企業</a>
-      </div>
-      <div class="news_info">
-        <ul>
-          <li><a href="#" title="" style="color: #000000">本公司榮獲臺中市政府表揚為優良企業</a><span>2019-06-04</span></li>
-          <li><a href="#" title="" style="color: #000000">榮獲2013年第二屆全國廣告工程設計比賽(優勝獎)</a><span>2019-06-04</span></li>
-          <li><a href="#" title="" style="color: #000000">榮獲2011年第一屆中華民國廣告招牌應用設計比賽決賽入圍</a><span>2019-06-04</span></li>
-        </ul>
-      </div>
-    </div>
-    <div class="news_n none" id="new02"> 
-      <div class="news_pic ">
-       <div class="news_pic "> <a href="xinwen/redian/37.html" title="高端门窗有什么不一样"><img src="images/n2.jpg" alt="高端门窗有什么不一样" /></a> <a href="xinwen/redian/37.html" title="高端门窗有什么不一样" class="t">高端门窗有什么不一样</a> </div>
-      </div>
-      <div class="news_info">
-        <ul>
-          <li><a href="xinwen/redian/37.html" title="高端门窗有什么不一样">高端门窗有什么不一样</a><span>2019-06-04</span></li>
-          <li><a href="xinwen/redian/36.html" title="搭建系统阳光房选择位置的重要性">搭建系统阳光房选择位置的重要性</a><span>2019-06-04</span></li>
-          <li><a href="xinwen/redian/34.html" title="建造雨棚通常用到的材质有哪些？">建造雨棚通常用到的材质有哪些？</a><span>2019-06-04</span></li>
-        </ul>
-      </div>
-    </div> -->
   </div>
 
   <div class="cjwq fr wow bounceInRight">
     <div class="cjwq_nav">
      <h3><a href="#" title="">最新消息</a></h3>
-      <!-- <a href="#" title="more+" class="more">了解更多</a> </div> -->
     <div class="clearboth"></div>
     <div class="cjwq_n" style="margin-top: 10px">
       <div class="bd">
@@ -408,48 +335,42 @@
               <p>本公司榮獲2011年廣告招牌應用設計比賽決賽入圍</p>
             </dd>
           </li>
-          <!-- <li>
-            <dt><a href="#" title=""><img src="images/n2.jpg" alt="" /></a></dt>
-            <dd><a href="#" title="" class="news_a">2016年優良企業</a>
-              <p>本公司榮獲臺中市商業會表揚為2016年優良企業</p>
-            </dd>
-          </li> -->
         </ul>
       </div>
     </div>
     <script type="text/javascript">
       jQuery(".cjwq_n").slide({titCell:".hd ul",mainCell:".bd ul",autoPage:true,effect:"topLoop",autoPlay:true,vis:1});
     </script> 
+    </div>
   </div>
-  </div>
-</div>
+</div> -->
 <div class="clearboth"></div>
-<!-- <div class="mainall">
+<div class="mainall">
   <div class="case_t tc mt40">
-    <h3><a href="anli/index.html" title="经典案例">经典案例
-      <p>广泛应用于别墅小区、政府单位、医疗行业、教育培训、企业工厂等</p>
+    <h3><a href="#" title="TOP 5" style="color: #F39800">TOP 5
+      <p>快得力產品廣泛使用於政府單位、公司行號、社區住宅、營業商家等</p>
       </a></h3>
   </div>
   <div class="case_n">
     <ul>
-      <li class="case1"> <a href="anli/12.html" title="工程案例标题六" class="pros_img"><img src="uploads/allimg/190601/1-1Z6011F0170-L.jpg" alt="工程案例标题六" /></a>
-        <p><a href="anli/12.html" title="工程案例标题六">工程案例标题六</a> </p>
+      <li class="case1"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro1.jpg" alt="工程案例" /></a>
+        <p style="background: #F39800"><a href="#" title="工程案例">工程案例一</a> </p>
       </li>
-      <li class="case2"> <a href="anli/11.html" title="工程案例展示五" class="pros_img"><img src="uploads/allimg/190601/1-1Z6011A9530-L.jpg" alt="工程案例展示五" /></a>
-        <p><a href="anli/11.html" title="工程案例展示五">工程案例展示五</a> </p>
+      <li class="case2"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro2.jpg" alt="工程案例" /></a>
+        <p style="background: #F39800"><a href="#" title="工程案例">工程案例二</a> </p>
       </li>
-      <li class="case3"> <a href="anli/10.html" title="工程案例标题四" class="pros_img"><img src="uploads/allimg/190601/1-1Z6011A9340-L.jpg" alt="工程案例标题四" /></a>
-        <p><a href="anli/10.html" title="工程案例标题四">工程案例标题四</a> </p>
+      <li class="case3"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro3.jpg" alt="工程案例" /></a>
+        <p style="background: #F39800"><a href="#" title="工程案例">工程案例三</a> </p>
       </li>
-      <li class="case4"> <a href="anli/9.html" title="工程案例标题三" class="pros_img"><img src="uploads/allimg/190601/1-1Z6011AZ70-L.jpg" alt="工程案例标题三" /></a>
-        <p><a href="anli/9.html" title="工程案例标题三">工程案例标题三</a> </p>
+      <li class="case4"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro4.jpg" alt="工程案例" /></a>
+        <p style="background: #F39800"><a href="#" title="工程案例">工程案例四</a> </p>
       </li>
-      <li class="case5"> <a href="anli/8.html" title="工程案例标题二" class="pros_img"><img src="uploads/allimg/190601/1-1Z6011AU00-L.jpg" alt="工程案例标题二" /></a>
-        <p><a href="anli/8.html" title="工程案例标题二">工程案例标题二</a> </p>
+      <li class="case5"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro5.jpg" alt="工程案例" /></a>
+        <p style="background: #F39800"><a href="#" title="工程案例">工程案例五</a> </p>
       </li>
     </ul>
   </div>
-</div> -->
+</div>
 
 <!-- <div class="ys_dbg">
   <div class="mainall1 re">
@@ -595,9 +516,9 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
 </div> -->
 
 <!-- 地圖 -->
-<div style="margin-top: -100px">
+<!-- <div style="margin-top: -100px">
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7280.747144554078!2d120.62006700000002!3d24.158628!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x600d7db55906b05c!2z5b-r5b6X5Yqb5buj5ZGK5pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2stw!4v1574138373489!5m2!1szh-TW!2stw" width="1920" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-</div>
+</div> -->
 
 <link href="style/css/extra.css" rel="stylesheet" type="text/css" />
 
