--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
 
 <!-- 地圖 -->
 <div style="margin-top: -100px">
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7280.747144554078!2d120.62006700000002!3d24.158628!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x600d7db55906b05c!2z5b-r5b6X5Yqb5buj5ZGK5pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2stw!4v1574138373489!5m2!1szh-TW!2stw" width="1920" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7280.747144554078!2d120.62006700000002!3d24.158628!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x600d7db55906b05c!2z5b-r5b6X5Yqb5buj5ZGK5pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2stw!4v1574138373489!5m2!1szh-TW!2stw" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 </div>
 
 <link href="style/css/extra.css" rel="stylesheet" type="text/css" />
@@ -605,7 +605,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
   <ul>
     <li><a href="javascript:docscroll('body');" title="回到頁首"> <img alt="回到頁首" title="回到頁首" src="style/images/top.jpg" /></a></li>
     <li class="bdsharebuttonbox"><a title="臉書專頁" data-cmd="more"><img alt="臉書專頁" title="臉書專頁" src="style/images/fb.jpg" /></a></li>
-    <li><a href="#" title="產品相簿"> <img alt="產品相簿" title="產品相簿" src="style/images/flickr.png" /></a></li>
+    <li><a href="#" title="產品相簿"> <img alt="產品相簿" title="產品相簿" src="style/images/flickr.jpg" /></a></li>
     <li><a href="#" title="產品項目"> <img alt="產品項目" title="產品項目" src="style/images/pro.jpg" /></a>
       <ul style="margin-left: -170px">
        
