--- a/product.html
+++ b/product.html
@@ -526,7 +526,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
   <ul>
     <li><a href="javascript:docscroll('body');" title="回到頁首"> <img alt="回到頁首" title="回到頁首" src="style/images/top.jpg" /></a></li>
     <li class="bdsharebuttonbox"><a title="臉書專頁" data-cmd="more"><img alt="臉書專頁" title="臉書專頁" src="style/images/fb.jpg" /></a></li>
-    <li><a href="#" title="產品相簿"> <img alt="產品相簿" title="產品相簿" src="style/images/flickr.png" /></a></li>
+    <li><a href="#" title="產品相簿"> <img alt="產品相簿" title="產品相簿" src="style/images/flickr.jpg" /></a></li>
     <li><a href="#" title="產品項目"> <img alt="產品項目" title="產品項目" src="style/images/pro.jpg" /></a>
       <ul style="margin-left: -170px">
        
