--- a/product.html
+++ b/product.html
@@ -130,6 +130,9 @@
       </ul>
     </div> -->
     <div class="clearboth"></div>
+    <div class="case_t tc mt40">
+    <h3 style="color: #f39800; background: #FFF"><a href="#" style="color: #f39800">廣告招牌分類、產品介紹，讓您迅速瞭解快得力的產品內容</a></h3>
+  </div>
     <div class="pro_show_n">
       <ul>
         <li>
@@ -347,25 +350,25 @@
 <div class="clearboth"></div>
 <div class="mainall">
   <div class="case_t tc mt40">
-    <h3><a href="#" title="TOP 5" style="color: #F39800">TOP 5
-      <p>快得力產品廣泛使用於政府單位、公司行號、社區住宅、營業商家等</p>
+    <h3><a href="#" title="TOP 5" style="color: #F39800">熱門專案/TOP5
+      <p>廣告招牌最熱搜專案，舉凡：商業空間、建案、餐廳．．．等</p>
       </a></h3>
   </div>
   <div class="case_n">
     <ul>
-      <li class="case1"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro1.jpg" alt="工程案例" /></a>
+      <li class="case1" style="height: 448px"><a href="#" title="工程案例" class="pros_img"><img src="images/pro1.jpg" alt="工程案例" /></a>
         <p style="background: #F39800"><a href="#" title="工程案例">工程案例一</a> </p>
       </li>
-      <li class="case2"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro2.jpg" alt="工程案例" /></a>
-        <p style="background: #F39800"><a href="#" title="工程案例">工程案例二</a> </p>
+      <li class="case2" style="margin-left: -10px"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro2.jpg" alt="工程案例" /></a>
+        <p style="background: #F39800;"><a href="#" title="工程案例">工程案例二</a> </p>
       </li>
-      <li class="case3"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro3.jpg" alt="工程案例" /></a>
+      <li class="case3" style="margin-left: -10px"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro3.jpg" alt="工程案例" /></a>
         <p style="background: #F39800"><a href="#" title="工程案例">工程案例三</a> </p>
       </li>
-      <li class="case4"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro4.jpg" alt="工程案例" /></a>
+      <li class="case4" style="margin-left: -10px; margin-top: 15px"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro4.jpg" alt="工程案例" /></a>
         <p style="background: #F39800"><a href="#" title="工程案例">工程案例四</a> </p>
       </li>
-      <li class="case5"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro5.jpg" alt="工程案例" /></a>
+      <li class="case5" style="margin-left: -10px; margin-top: 15px"> <a href="#" title="工程案例" class="pros_img"><img src="images/pro5.jpg" alt="工程案例" /></a>
         <p style="background: #F39800"><a href="#" title="工程案例">工程案例五</a> </p>
       </li>
     </ul>
@@ -516,9 +519,9 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
 </div> -->
 
 <!-- 地圖 -->
-<!-- <div style="margin-top: -100px">
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7280.747144554078!2d120.62006700000002!3d24.158628!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x600d7db55906b05c!2z5b-r5b6X5Yqb5buj5ZGK5pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2stw!4v1574138373489!5m2!1szh-TW!2stw" width="1920" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-</div> -->
+<div style="margin-top: 10px">
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7280.747144554078!2d120.62006700000002!3d24.158628!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x600d7db55906b05c!2z5b-r5b6X5Yqb5buj5ZGK5pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2stw!4v1574138373489!5m2!1szh-TW!2stw" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+</div>
 
 <link href="style/css/extra.css" rel="stylesheet" type="text/css" />
 
