--- a/ny.html
+++ b/ny.html
@@ -26,50 +26,47 @@
   <link rel="stylesheet" type="text/css" href="style/css/style2.css">
   <link rel="stylesheet" type="text/css" href="style/css/magnific-popup2.css">
   <link rel="stylesheet" type="text/css" href="style/css/owl.carousel2.css">
+  <link rel="stylesheet" type="text/css" href="style/css/css.css" />
 </head>
 
 <body class="shop-detail">
+
+<div class="top_bgk"> 
+  <div class="mainall">
+    <div class="logo_title fl" style="max-width: 250px">
+      <a href="index.html" title="快得力廣告"><img style="max-width: 85%; margin-left: 50px" src="images/logo1105_2.png" alt="快得力廣告" border="0"></a>
+    </div>
+    <div class="biaoyu">全台最得力品牌推手「快得力」招牌最夠力<br>Quickly, Fast, Do The Best！</div>
+    <div class="clearboth"></div>
+  </div>
+</div>
+
   <!-- =====  LODER  ===== -->
   <div class="loder"></div>
   <div class="wrapper">
     <!-- =====  HEADER START  ===== -->
     <header id="header">
-      <div class="header-top">
+      <!-- <div class="header-top">
         <div class="container">
           <div class="row">
             <div class="col-sm-6">
               <ul class="header-top-left">
-                <!-- <li class="language dropdown"> <span class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button"> <img src="images/English-icon.gif" alt="img"> English <span class="caret"></span> </span>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#"><img src="images/English-icon.gif" alt="img"> English</a></li>
-                    <li><a href="#"><img src="images/French-icon.gif" alt="img"> French</a></li>
-                    <li><a href="#"><img src="images/German-icon.gif" alt="img"> German</a></li>
-                  </ul>
-                </li> -->
-                <!-- <li class="currency dropdown"> <span class="dropdown-toggle" id="dropdownMenu12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button"> USD <span class="caret"></span> </span>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu12">
-                    <li><a href="#">USD</a></li>
-                    <li><a href="#">EUR</a></li>
-                    <li><a href="#">AUD</a></li>
-                  </ul>
-                </li> -->
               </ul>
             </div>
-            <!-- <div class="col-sm-6">
+            <div class="col-sm-6">
               <ul class="header-top-right text-right">
                 <li class="account"><a href="#">My Account</a></li>
                 <li class="sitemap"><a href="#">Sitemap</a></li>
                 <li class="cart"><a href="#">My Cart</a></li>
               </ul>
-            </div> -->
+            </div>
           </div>
         </div>
-      </div>
-      <div class="header">
+      </div> -->
+      <!-- <div class="header">
         <div class="container">
           <nav class="navbar">
-            <div class="navbar-header mtb_20"> <a class="navbar-brand" href="index.html"> <img style="width: 60%; margin-left: 40px" alt="" src="images/logo1105_2.png"> </a> </div>
-            <!-- <div class="header-right pull-right mtb_50">
+            <div class="header-right pull-right mtb_50">
               <button class="navbar-toggle pull-left" type="button" data-toggle="collapse" data-target=".js-navbar-collapse"> <span class="i-bar"><i class="fa fa-bars"></i></span></button>
               <div class="shopping-icon">
                 <div class="cart-item " data-target="#cart-dropdown" data-toggle="collapse" aria-expanded="true" role="button">Item's : <span class="cart-qty">02</span></div>
@@ -147,7 +144,7 @@
                 </div>
                 <div class="header-search"> <a id="search-overlay-btn"></a> </div>
               </div>
-            </div> -->
+            </div>
             <div class="collapse navbar-collapse js-navbar-collapse pull-right">
               <ul id="menu" class="nav navbar-nav">
                 <li> <a href="#">工程實績</a></li>
@@ -157,10 +154,9 @@
                 <li> <a href="#">最新消息</a></li>
               </ul>
             </div>
-            <!-- /.nav-collapse -->
           </nav>
         </div>
-      </div>
+      </div> -->
       <div class="header-bottom">
         <div class="container">
           <div class="row">
@@ -186,7 +182,7 @@
             <div class="col-sm-8 col-md-8 col-lg-9">
               <div class="header-bottom-right offers">
               	<div class="marquee"><span><i class="fa fa-circle" aria-hidden="true"></i>最得力的品牌推手</span>
-                  <span><i class="fa fa-circle" aria-hidden="true"></i>22年廣告招牌經驗</span>
+                  <span><i class="fa fa-circle" aria-hidden="true"></i>超過廿年廣告經驗</span>
                   <span><i class="fa fa-circle" aria-hidden="true"></i>招牌大量採購配套</span>
                   <span><i class="fa fa-circle" aria-hidden="true"></i>中區比賽優良企業</span>
                   <span><i class="fa fa-circle" aria-hidden="true"></i>商業招牌最優質顧問</span>
@@ -216,7 +212,7 @@
           <!-- <div class="left_banner left-sidebar-widget mt_30 mb_40"> <a href="#"><img src="images/left1.jpg" alt="Left Banner" class="img-responsive" /></a> </div> -->
           <div class="left-special left-sidebar-widget mb_50">
             <div class="heading-part mb_20 ">
-              <h2 class="main_title">TOP 5</h2>
+              <h2 class="main_title" style="color: #f39800">熱門專案/TOP5</h2>
             </div>
             <div id="left-special" class="owl-carousel">
               <ul class="row ">
