--- a/product.html
+++ b/product.html
@@ -48,17 +48,17 @@
 <div class="nav_bg" id="fixedNav">
   <div class="mainall">
     <ul>
-      <li style="margin-left: 50px"><a  href="index.html" title="快得力首頁">首頁/Home</a> </li>
+      <li style="margin-left: 50px"><a  href="./index.html" title="快得力首頁">首頁/Home</a> </li>
       
-        <li><a href='./ny.html'>工程實績/Case</a></li><!-- hzkh -->
+        <li><a href='./case.html'>工程實績/Case</a></li><!-- hzkh -->
 
-        <li  class='another'><a href='product.html'>產品項目/Product</a></li>
+        <li  class='another'><a href='./product.html'>產品項目/Product</a></li>
 
-        <li><a href='company/index.html'>報價諮詢/Order</a></li> <!-- (gongsi) -->
+        <li><a href='./order.html'>報價諮詢/Order</a></li> <!-- (gongsi) -->
 
-      	<li><a href='about/index.html'>關於我們/About</a></li>
+      	<li><a href='./about.html'>關於我們/About</a></li>
 
-        <li><a href='news/index.html'>最新消息/News</a></li> <!-- (xinwen) -->
+        <li><a href='./news.html'>最新消息/News</a></li> <!-- (xinwen) -->
 
       	<!-- <li><a href='newsletter/index.html'>Newsletter</a></li> (liuyan) -->
       	
@@ -598,19 +598,19 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
           <div class="col-md-2 footer-block">
             <h6 class="footer-title ptb_20">網頁地圖</h6>
             <ul>
-              <li><a href="index.html" style="color: #777">首頁</a></li>
-              <li><a href="#" style="color: #777">工程實績</a></li>
-              <li><a href="product.html" style="color: #777">產品項目</a></li>
-              <li><a href="#" style="color: #777">報價諮詢</a></li>
-              <li><a href="#" style="color: #777">關於我們</a></li>
-              <li><a href="#" style="color: #777">最新消息</a></li>
+              <li><a href="./index.html" style="color: #777">首頁</a></li>
+              <li><a href="./case.html" style="color: #777">工程實績</a></li>
+              <li><a href="./product.html" style="color: #777">產品項目</a></li>
+              <li><a href="./order.html" style="color: #777">報價諮詢</a></li>
+              <li><a href="./about.html" style="color: #777">關於我們</a></li>
+              <li><a href="./news.html" style="color: #777">最新消息</a></li>
             </ul>
           </div>
           <div class="col-md-2 footer-block">
             <h6 class="footer-title ptb_20">工程實績</h6>
             <ul>
-              <li><a href="./ny.html" style="color: #777">一起肉肉吧</a></li>
-              <li><a href="#" style="color: #777">一拳咖啡</a></li>
+              <li><a href="./c1.html" style="color: #777">一起肉肉吧</a></li>
+              <li><a href="./c2.html" style="color: #777">一拳咖啡</a></li>
               <!-- <li><a href="#">My Orders</a></li> -->
               <!-- <li><a href="#">My Credit Slips</a></li> -->
               <!-- <li><a href="#">My Addresses</a></li> -->
